增加日志，保存图片到数据库
Signed-off-by: luowengang <luowengang9527@163.com>