@@ -1,3 +1,6 @@
 java -jar mybatis.jar -configfile generator.xml -overwrite
 
+java  -Djava.ext.dirs=D:\Code\Projects\plugin\generator_mybatis-master\mybatis-generator-core; -jar mybatis.jar -configfile generator.xml -overwrite
+
+
 java -jar mybatis.jar -configfile generatorOracle.xml -overwrite
